[project]
name = "explore-uv"
version = "0.1.0"
description = "Intentemos usar uv para manejar dependencias"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]", # obvio
]

[tool.ruff]
extend-select = ["I"]
ignore = ["F821"]     # no reportar "undefined name" (lo hace Pyright)
line-length = 88      # para el
indent-width = 4      # formateo automatico

[tool.ruff.format] # mas formateo
quote-style = "double"                 # doble " " para strings (no ' ')
indent-style = "space"                 # tabs de espacios no de tabs
skip-magic-trailing-comma = false      # no-onelineizar si termino con una ,
line-ending = "auto"                   # no tengo idea pero pinta auto
docstring-code-format = true           # codeformatting in docstrings
docstring-code-line-length = "dynamic" # line length dynamic... ok

# Configuracion de Pyright para que ignore lo que Ruff ya hace
# la idea es ver cuando haya overlap e irlo desactivando
[tool.pyright]
# typeCheckingMode = "basic"
# reportUnusedVariable = false
# reportUnusedImport = false
# reportGeneralTypeIssues = false
# reportMissingModuleSource = false
